--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Sew With Joy</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/css/main.css" />
   </head>
   <body class="homepage">
     <div id="page-wrapper">
