--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
     <title>Sew With Joy</title>
     <meta charset="utf-8" />
+    <base href="/" />
     <link rel="stylesheet" type="text/css" href="stylesheets/css/main.css" />
   </head>
   <body class="homepage">
