--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Sew With Joy</title>
     <meta charset="utf-8" />
     <base href="/" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
   </head>
   <body class="homepage">
     <div id="page-wrapper">
